@@ -1,0 +1,3 @@
+
+MSG_DEF(RBSMMSG_INCOMPATIBLE_PROTO,     8, 3, JSEXN_TYPEERR, "{0}.prototype.{1} called on incompatible {2}")
+MSG_DEF(RBSMMSG_NOT_FUNCTION,           22, 1, JSEXN_TYPEERR, "{0} is not a function")
